--- a/src/jfbchat/frames/MainFrame.form
+++ b/src/jfbchat/frames/MainFrame.form
@@ -14,7 +14,7 @@
                 <Property name="text" type="java.lang.String" value="Disconnect"/>
               </Properties>
               <Events>
-                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="MenuDisconnectMousePressed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MenuDisconnectActionPerformed"/>
               </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JPopupMenu$Separator" name="jSeparator1">
@@ -33,9 +33,7 @@
                 <Property name="toolTipText" type="java.lang.String" value="Quit"/>
               </Properties>
               <Events>
-                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="MenuExitMousePressed"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MenuExitActionPerformed"/>
-                <EventHandler event="menuKeyReleased" listener="javax.swing.event.MenuKeyListener" parameters="javax.swing.event.MenuKeyEvent" handler="MenuExitMenuKeyReleased"/>
               </Events>
             </MenuItem>
           </SubComponents>
@@ -235,12 +233,12 @@
                                       <EmptySpace pref="260" max="32767" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="1" attributes="0">
-                                      <Group type="103" groupAlignment="1" attributes="0">
-                                          <Component id="usernameLabel" alignment="0" min="-2" pref="128" max="-2" attributes="0"/>
-                                          <Component id="EntryUser" alignment="0" pref="306" max="32767" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="usernameLabel" min="-2" pref="128" max="-2" attributes="0"/>
+                                          <Component id="EntryUser" pref="293" max="32767" attributes="0"/>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="questionButton" min="-2" pref="19" max="-2" attributes="0"/>
+                                      <Component id="questionButton" min="-2" pref="32" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -355,6 +353,9 @@
                         </Property>
                         <Property name="text" type="java.lang.String" value="Auto login"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jCheckBoxAutoItemStateChanged"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JButton" name="ButtonLogin">
                       <Properties>
